--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p This is heroku server 
+  //- a(class='button') Press Me
+  <button (type="button", class="btn btn-secondary")>PressMe</button
