--- a/views/Icecream.pug
+++ b/views/Icecream.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1= title 
+  h1= title
+  p Search results Icecream  
   p 
   div(class="container-fluid")
         div(class="row")
@@ -24,8 +25,13 @@ block content
                     },                   
                 ]
             each v,index in Icecream 
-                div(class="col-sm-2" ) #{v.brand}
-                div(class="col-sm-2" ) #{v.flavour}
-                div(class="col-sm-2" ) #{v.cost}
+                div(class="col-sm-2" onclick=`buy(${index})`) #{v.brand}
+                div(class="col-sm-2" onclick=`buy(${index})`) #{v.flavour}
+                div(class="col-sm-2" onclick=`buy(${index})`) #{v.cost}
 
+  script.                
+        function buy(intemNo)
+        {
+              alert(`you purchased Item ${intemNo+1}`)
+        }
   
