--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
   <br>
   <br>
   div(id="target") Display
-  a(href = '/fan') Icecream Page link
+  a(href = '/Icecream') Icecream Page link
   |
   script. 
     let client_count = 0;
